# gitgrind

./: README.md  pyproject.toml
.github/workflow/: workflow.yml
.github/workflows/: bumpversion.yml  python-package.yml  python-publish.yml
gitgrind/: gitgrind.py  main.py  test_grind.py
