[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-package"
version = "0.1.0"
description = "A short description of my awesome package."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Kurt Godwin", email = "48928663+kurt-cb@users.noreply.github.com" },
]
maintainers = [
  { name = "Kurt Godwin", email = "48928663+kurt-cb@users.noreply.github.com" },
]
keywords = ["python", "git", "grep", "find", "dangling", "commit", "search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kurt-cb/gitgrind/"
Documentation = "https://gitgrind.readthedocs.io/"
Repository = "https://github.com/kurt-cb/gitgrind"

[project.dependencies]
pygit2 = ">=1.18.2"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
]
